--- a/app/src/main/res/layout/activity_social_media.xml
+++ b/app/src/main/res/layout/activity_social_media.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:id="@+id/imageViewPost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/pipit" />
 
     <Button
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Please enter a description for your image..."
         android:inputType="textPersonName"
         android:visibility="invisible" />
 
