--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -6,4 +6,8 @@
         android:title="Logout"
         app:showAsAction="always"
         />
+    <item android:id="@+id/viewPostsItem"
+        android:title="View Posts"
+        app:showAsAction="always"
+        />
 </menu>
